[package]
name = "rusted_arena"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
impl_ops = "0.1.1"
mockall = "0.6.0"
piston_window = "0.105.0"